fix: Npe when geoserver request data-virt (#687)